# LDSV

./: .gitignore  CMakeLists.txt  Planning.typ  README.md  build.sh
docs/: Architecture.typ  Planning.typ
include/app/: Visualizable.hpp
src/: CMakeLists.txt  main.cpp
src/app/: DataStructureSamples.hpp
src/ui/: MainWindow.hpp
